# Faunistica_4.0

./: .envrc  Makefile  README.md  alembic.ini  config.yaml  package-lock.json
backend/: .env.example  .envrc  .gitignore  Makefile  alembic.ini  app.py  compose.yml  config.yaml  docker-compose.yml  init.sh  locations.json  pyproject.toml  records.xlsx  requirements.txt  wait-for-postgres.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tables.py  002_rename_columns.py  2026_04_24_2105-27041cf0b012_create_tables.py  2026_04_24_2110-34365a0c6a9b_rename_columns.py  2026_04_25_1200-fix_records_drift.py  2026_04_27_1737-d9dda5d0fe5a_add_constraints.py  2026_04_27_1745-8b5c5cd24625_create_event_records.py  2026_05_10_1516-afe1e469c3ca_add_token_version_to_users.py  2026_05_11_1546-9d20ba7f16c1_change_latitude_and_longitude_to_text.py  2026_05_12_1233-9e393dd028a7_add_actions_id.py  2026_05_12_1302-b30dafb6539a_add_non_null_constraints.py  2026_05_12_1440-e81c775456a5_add_server_defaults.py  2026_05_15_2204-97ece5251480_add_id_to_records_spiders.py  54fdd17e567d_create_account_table.py
backend/back_api/: autofill_taxon.py  check_auth.py  del_record.py  edit_record.py  gen_stats.py  geo_search.py  get_localion.py  get_publ.py  get_record.py  get_records_file.py  info.py  logout.py  messages.py  next_publ.py  pers_stats.py  publ_from_hash.py  records.py  refresh_token.py  schemas.py  suggest_taxon.py  support.py  token.py  user_image.py  users.py
backend/bot/: bot_main.py  button_markups.py  generate_pass.py  handlers.py  messages.py  states.py
backend/config/: config.py  config_vars.py
backend/data/: short_countries.txt  ural_border.geojson
backend/database/: crud.py  database.py  hash.py  models.py
backend/scripts/: check_schema.py  seed.py
backend/src/: app.py  model.py
backend/src/api/: __init__.py  autofill_taxon.py  check_auth.py  del_record.py  dependencies.py  edit_record.py  gen_stats.py  geo_search.py  get_localion.py  get_publ.py  get_record.py  get_records_file.py  next_publ.py  pers_stats.py  publ_from_hash.py  rate_limiter.py  records.py  refresh_token.py  schemas.py  suggest_taxon.py  support.py  user_image.py  users.py  util.py
backend/src/api/auth/: __init__.py  check.py  login.py  logout.py  refresh.py
backend/src/api/geo/: __init__.py  reverse_geocode.py  search.py
backend/src/api/publications/: __init__.py  comments.py  complete.py  current.py  list.py  metadata.py
backend/src/api/record/: __init__.py  create.py  delete.py  get.py  list.py  update.py
backend/src/api/records/: __init__.py  create.py  delete.py  get.py  import_file.py  list.py  record.py  update.py
backend/src/api/statistics/: __init__.py  project.py  users.py
backend/src/api/stats/: __init__.py  general.py
backend/src/api/taxonomy/: __init__.py  autofill.py  suggest.py
backend/src/api/user/: __init__.py  me.py  photo.py  publication.py
backend/src/api/user/record/: __init__.py  create.py  delete.py  get.py  list.py  update.py
backend/src/api/users/: __init__.py  lookup.py  me.py  photo.py  publication.py  winner.py
backend/src/back_api/: autofill_taxon.py  check_auth.py  del_record.py  edit_record.py  gen_stats.py  geo_search.py  get_localion.py  get_publ.py  get_record.py  get_records_file.py  info.py  logout.py  messages.py  next_publ.py  pers_stats.py  publ_from_hash.py  records.py  refresh_token.py  schemas.py  suggest_taxon.py  support.py  user_image.py  users.py  util.py
backend/src/bot/: __init__.py  bot.py  bot_main.py  constants.py  generate_pass.py  handlers.py  keyboards.py  messages.py  states.py
backend/src/bot/handlers/: __init__.py  admin.py  auth.py  errors.py  fallback.py  menu.py  registration.py  rename.py  sociology.py  start.py  stats.py  support.py
backend/src/config/: config.py  config_vars.py
backend/src/core/: check_schema.py  config.py  database.py  dependencies.py  enums.py  exceptions.py  lifespan.py  logging.py  model.py  rate_limiter.py  security.py  utils.py
backend/src/database/: crud.py  database.py  hash.py  models.py
backend/src/models/: __init__.py
backend/src/repository/: log.py  publication.py  record.py  stats.py  user.py  util.py
backend/src/schema/: common.py  geo.py  jwt.py  records.py  statistics.py  user.py
backend/src/schemas/: __init__.py  common.py  geo.py  jwt.py  records.py  taxonomy.py  user.py
backend/src/service/: actions.py  csv.py  export.py  geo.py  milestone.py  publication.py  publication_service.py  publications.py  record.py  record_service.py  records.py  specimen.py  support.py  taxon.py  telegram.py  token.py  user.py  user_service.py  util.py
backend/src/service/records/: __init__.py  convert.py  util.py
backend/src/service/records/validation/: __init__.py  constants.py  errors.py  helpers.py  rules.py
backend/src/service/records/validation/rules/: __init__.py  abundance.py  base.py  (+4 more)
backend/tests/: conftest.py  test_actions.py  test_auth.py  test_exceptions.py  test_geo.py  test_milestone.py  test_publication_service.py  test_publications.py  test_publications_additional.py  test_publications_comments.py  test_publications_complete.py  test_publications_metadata.py  test_rate_limiting.py  test_records.py  test_seed_script.py  test_statistics.py  test_support.py  test_taxonomy.py  test_user_me.py  test_winner.py
backend/tests/api/: test_actions.py  test_auth.py  test_exceptions.py  test_geo.py  test_milestone.py  test_publications.py  test_rate_limiting.py  test_records.py  test_statistics.py  test_support.py  test_user_me.py  test_winner.py
backend/tests/unit/: test_bot_handlers.py  test_convert.py  test_exceptions_unit.py  test_publication_service.py  test_record_service.py  test_security.py  test_taxonomy.py  test_user_service.py  test_user_state_enum.py
backend/tests/validation/: test_abundance.py  test_base.py  test_errors.py  test_event.py  test_helpers.py  test_integration.py  test_location.py  test_taxonomy.py  test_validation_geo.py  test_validation_taxonomy.py
backend/text_processing/: Data.py  gbif_parser.py  geodecoder.py  splitting.py
(+141 files in other folders)
