[project]
name = "faunistica-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "geopy",
    "pygbif",
    "sqlalchemy",
    "asyncpg",
    "aiogram",
    "cryptography",
    "argon2-cffi",
    "pyjwt[crypto]>=2.8.0",
    "pandas",
    "aiohttp",
    "openpyxl",
    "aiohttp-socks>=0.11.0",
    "greenlet>=3.3.2",
    "alembic>=1.18.4",
    "pydantic-settings[yaml]>=2.13.1",
    "slowapi>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.vulture]
exclude = ["src/schema", "src/core/model.py"]
ignore_decorators = ["@router.*"]
ignore_names = ["cls", "settings_customise_sources", "model_config"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "ANN",
    "PYI",
    "RSE",
    "TC",
    "I",      # isort (imports)
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "FAST",   # FastAPI-specific
    "B",      # flake8-bugbear (best practices)
    "UP",     # pyupgrade (modern Python)
    "ASYNC",  # async best practices
    "C4",     # comprehensions
    "SIM",    # simplify code
    "RET",    # return statements
    "S",      # bandit (security)
    "PL",     # Pylint
]
ignore = [
    "PLR2004", # ignore magick variables for now
    "PLR0913", # max 5 arguments
    "PLR0912"  # ignore too many branches
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201", "E501", "PLC0415", "S105", "PLW0603", "ANN202"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
order-by-type = true

[tool.ruff.format]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.7",
    "ty>=0.0.32",
    "types-openpyxl>=3.1.5.20260408",
    "vulture>=2.16",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "testcontainers>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
    "testcontainers>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-W ignore::DeprecationWarning"

